@@ -3,33 +3,32 @@ package com.projects.listeners;
 import com.projects.readycheck.ReadyCheckManager;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import net.dv8tion.jda.api.entities.Member;
 import net.dv8tion.jda.api.entities.Role;
 import net.dv8tion.jda.api.entities.channel.concrete.TextChannel;
 import net.dv8tion.jda.api.events.interaction.component.StringSelectInteractionEvent;
 import net.dv8tion.jda.api.hooks.ListenerAdapter;
 
-public class SelectionMenuInteractionListener extends ListenerAdapter {
+public final class SelectionMenuInteractionListener extends ListenerAdapter {
+  private static final String SELECT_SAVED_READY = "select_saved_ready";
 
   @Override
-  public void onStringSelectInteraction(StringSelectInteractionEvent event) {
-    String menuId = event.getComponentId();
+  public void onStringSelectInteraction(final StringSelectInteractionEvent event) {
+    final String menuId = event.getComponentId();
 
-    if (menuId.startsWith("select_saved_ready")) {
+    if (menuId.startsWith(SELECT_SAVED_READY)) {
       handleSavedReadySelection(event);
     }
   }
 
-  private void handleSavedReadySelection(StringSelectInteractionEvent event) {
-    String selectedValue = event.getValues().getFirst();
-    Member initiator = event.getMember();
-    TextChannel channel = event.getChannel().asTextChannel();
-    String guildId = Objects.requireNonNull(event.getGuild()).getId();
+  private void handleSavedReadySelection(final StringSelectInteractionEvent event) {
+    final String selectedValue = event.getValues().getFirst();
+    final Member initiator = event.getMember();
+    final TextChannel channel = event.getChannel().asTextChannel();
+    final String guildId = Objects.requireNonNull(event.getGuild()).getId();
 
-    // Extract mentionPeople parameter from component ID
-    String componentId = event.getComponentId();
-    boolean mentionPeople = !componentId.endsWith("_false");
+    final String componentId = event.getComponentId();
+    final boolean mentionPeople = !componentId.endsWith("_false");
 
     if (selectedValue.startsWith("users_")) {
       handleUserBasedSelection(
@@ -41,30 +40,29 @@ public class SelectionMenuInteractionListener extends ListenerAdapter {
   }
 
   private void handleUserBasedSelection(
-      StringSelectInteractionEvent event,
-      String selectedValue,
-      Member initiator,
-      TextChannel channel,
-      String guildId,
-      boolean mentionPeople,
-      String componentId) {
-    // Extract hash code from value like "users_12345_1"
-    String[] parts = selectedValue.split("_");
+      final StringSelectInteractionEvent event,
+      final String selectedValue,
+      final Member initiator,
+      final TextChannel channel,
+      final String guildId,
+      final boolean mentionPeople,
+      final String componentId) {
+    final String[] parts = selectedValue.split("_");
     if (parts.length < 2) {
       event.reply("The selected saved configuration is invalid!").setEphemeral(true).queue();
       return;
     }
 
-    String hashCode = parts[1];
+    final String hashCode = parts[1];
 
-    ReadyCheckManager.SavedReadyCheck savedCheck = findSavedCheckByHashCode(guildId, hashCode);
+    final ReadyCheckManager.SavedReadyCheck savedCheck =
+        findSavedCheckByHashCode(guildId, hashCode);
     if (savedCheck == null) {
       event.reply("The selected saved configuration no longer exists!").setEphemeral(true).queue();
       return;
     }
 
-    // Check for existing ready check
-    String existingCheckId =
+    final String existingCheckId =
         ReadyCheckManager.findExistingReadyCheck(guildId, savedCheck, initiator.getId());
     if (existingCheckId != null && ReadyCheckManager.isReadyCheckOngoing(existingCheckId)) {
       ReadyCheckManager.resendExistingReadyCheck(existingCheckId, event.getJDA());
@@ -77,7 +75,7 @@ public class SelectionMenuInteractionListener extends ListenerAdapter {
       return;
     }
 
-    List<Member> targetMembers =
+    final List<Member> targetMembers =
         getValidMembersFromUserIds(event, savedCheck.getUserIds(), initiator.getId());
     if (targetMembers.isEmpty()) {
       event
@@ -87,14 +85,12 @@ public class SelectionMenuInteractionListener extends ListenerAdapter {
       return;
     }
 
-    String readyCheckId =
+    final String readyCheckId =
         ReadyCheckManager.createUserReadyCheck(
             guildId, channel.getId(), initiator.getId(), targetMembers);
 
-    // For /ready command menu selections, use the command's mention preference
-    // For /r command menu selections, use the saved mention preference
-    boolean useMentions =
-        componentId.equals("select_saved_ready") ? savedCheck.getMentionPeople() : mentionPeople;
+    final boolean useMentions =
+        componentId.equals(SELECT_SAVED_READY) ? savedCheck.getMentionPeople() : mentionPeople;
     ReadyCheckManager.setMentionPreference(readyCheckId, useMentions);
 
     ReadyCheckManager.createReadyCheckResponse(
@@ -106,30 +102,29 @@ public class SelectionMenuInteractionListener extends ListenerAdapter {
   }
 
   private void handleRoleBasedSelection(
-      StringSelectInteractionEvent event,
-      String selectedRoleId,
-      Member initiator,
-      TextChannel channel,
-      String guildId,
-      boolean mentionPeople,
-      String componentId) {
-    Role targetRole = event.getGuild().getRoleById(selectedRoleId);
+      final StringSelectInteractionEvent event,
+      final String selectedRoleId,
+      final Member initiator,
+      final TextChannel channel,
+      final String guildId,
+      final boolean mentionPeople,
+      final String componentId) {
+    final Role targetRole = event.getGuild().getRoleById(selectedRoleId);
     if (targetRole == null) {
       event.reply("The selected role no longer exists!").setEphemeral(true).queue();
       return;
     }
 
-    // Find the saved check to get the mention preference
-    ReadyCheckManager.SavedReadyCheck savedCheck =
+    final ReadyCheckManager.SavedReadyCheck savedCheck =
         ReadyCheckManager.getSavedReadyChecks(guildId).stream()
             .filter(check -> !check.isUserBased() && selectedRoleId.equals(check.getRoleId()))
             .findFirst()
             .orElse(null);
 
-    List<Member> targetMembers =
+    final List<Member> targetMembers =
         event.getGuild().getMembersWithRoles(targetRole).stream()
             .filter(member -> !member.equals(initiator))
-            .collect(Collectors.toList());
+            .toList();
 
     if (targetMembers.isEmpty()) {
       event
@@ -139,14 +134,12 @@ public class SelectionMenuInteractionListener extends ListenerAdapter {
       return;
     }
 
-    String readyCheckId =
+    final String readyCheckId =
         ReadyCheckManager.createReadyCheck(
             guildId, channel.getId(), initiator.getId(), targetRole.getId(), targetMembers);
 
-    // For /ready command menu selections, use the command's mention preference
-    // For /r command menu selections, use the saved mention preference
-    boolean useMentions =
-        componentId.equals("select_saved_ready") && savedCheck != null
+    final boolean useMentions =
+        componentId.equals(SELECT_SAVED_READY) && savedCheck != null
             ? savedCheck.getMentionPeople()
             : mentionPeople;
     ReadyCheckManager.setMentionPreference(readyCheckId, useMentions);
@@ -163,7 +156,7 @@ public class SelectionMenuInteractionListener extends ListenerAdapter {
   }
 
   private ReadyCheckManager.SavedReadyCheck findSavedCheckByHashCode(
-      String guildId, String hashCode) {
+      final String guildId, final String hashCode) {
     return ReadyCheckManager.getSavedReadyChecks(guildId).stream()
         .filter(
             check ->
@@ -174,11 +167,13 @@ public class SelectionMenuInteractionListener extends ListenerAdapter {
   }
 
   private List<Member> getValidMembersFromUserIds(
-      StringSelectInteractionEvent event, List<String> userIds, String initiatorId) {
+      final StringSelectInteractionEvent event,
+      final List<String> userIds,
+      final String initiatorId) {
     return userIds.stream()
         .filter(userId -> !userId.equals(initiatorId))
         .map(userId -> event.getGuild().getMemberById(userId))
         .filter(Objects::nonNull)
-        .collect(Collectors.toList());
+        .toList();
   }
 }
