@@ -3,46 +3,45 @@ package com.projects.readycheck;
 import com.projects.readycheck.utils.ReadyCheckUtils;
 import com.projects.recovery.MessageParser;
 import com.projects.recovery.RecoveredReadyCheckData;
-import com.projects.recovery.RecoveryConfig;
 import com.projects.recovery.UserResolver;
 import java.util.concurrent.TimeUnit;
 import net.dv8tion.jda.api.JDA;
 import net.dv8tion.jda.api.entities.Guild;
 import net.dv8tion.jda.api.entities.Message;
+import net.dv8tion.jda.api.entities.MessageEmbed;
 import net.dv8tion.jda.api.entities.channel.concrete.TextChannel;
 import net.dv8tion.jda.api.interactions.components.ActionRow;
 import net.dv8tion.jda.api.interactions.components.buttons.Button;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-public class ReadyCheckRecoveryManager {
+public final class ReadyCheckRecoveryManager {
   private static final Logger logger = LoggerFactory.getLogger(ReadyCheckRecoveryManager.class);
   private static final int RECOVERY_HOURS = 12;
   private static final String TOGGLE_READY_PREFIX = "toggle_ready_";
+  public static final int DEFAULT_MAX_MESSAGES = 10;
 
-  private ReadyCheckRecoveryManager() {
-    // Private constructor to hide implicit public one
-  }
+  private ReadyCheckRecoveryManager() {}
 
-  public static void recoverReadyChecksFromMessages(JDA jda) {
+  public static void recoverReadyChecksFromMessages(final JDA jda) {
     logger.info("Starting ready check recovery from messages (last {} hours)...", RECOVERY_HOURS);
 
-    for (Guild guild : jda.getGuilds()) {
+    for (final Guild guild : jda.getGuilds()) {
       recoverGuildReadyChecks(guild);
     }
   }
 
-  private static void recoverGuildReadyChecks(Guild guild) {
-    long cutoffTime = System.currentTimeMillis() - TimeUnit.HOURS.toMillis(RECOVERY_HOURS);
+  private static void recoverGuildReadyChecks(final Guild guild) {
+    final long cutoffTime = System.currentTimeMillis() - TimeUnit.HOURS.toMillis(RECOVERY_HOURS);
     int totalRecovered = 0;
 
-    for (TextChannel channel : guild.getTextChannels()) {
+    for (final TextChannel channel : guild.getTextChannels()) {
       if (!channel.canTalk()) continue;
 
       try {
-        int channelRecovered = scanChannelForReadyChecks(channel, cutoffTime);
+        final int channelRecovered = scanChannelForReadyChecks(channel, cutoffTime);
         totalRecovered += channelRecovered;
-      } catch (Exception e) {
+      } catch (final Exception e) {
         logger.debug("Couldn't scan channel {}: {}", channel.getName(), e.getMessage());
       }
     }
@@ -52,41 +51,43 @@ public class ReadyCheckRecoveryManager {
     }
   }
 
-  private static int scanChannelForReadyChecks(TextChannel channel, long cutoffTime) {
-    int recovered = 0;
-
+  private static int scanChannelForReadyChecks(final TextChannel channel, final long cutoffTime) {
     channel
         .getHistory()
-        .retrievePast(RecoveryConfig.DEFAULT_MAX_MESSAGES)
+        .retrievePast(DEFAULT_MAX_MESSAGES)
         .queue(
             messages -> {
-              for (Message message : messages) {
-                if (shouldRecoverMessage(message, cutoffTime) && hasReadyCheckButtons(message)) {
+              for (final Message message : messages) {
+                if (isRecoverableMessage(message, cutoffTime) && hasReadyCheckButtons(message)) {
                   recoverReadyCheckFromMessage(message);
                 }
               }
             });
 
-    return recovered;
+    return 0; // Async operation, can't return actual count
   }
 
-  private static boolean shouldRecoverMessage(Message message, long cutoffTime) {
-    if (!message.getAuthor().equals(message.getJDA().getSelfUser())
-        || message.getTimeCreated().toInstant().toEpochMilli() <= cutoffTime
-        || message.getEmbeds().isEmpty()) {
+  private static boolean isRecoverableMessage(final Message message, final long cutoffTime) {
+    if (!isValidMessageForRecovery(message, cutoffTime)) {
       return false;
     }
 
-    var embed = message.getEmbeds().get(0);
+    final var embed = message.getEmbeds().getFirst();
     if (embed.getTitle() == null) {
       return false;
     }
 
-    String title = embed.getTitle().toLowerCase();
+    final String title = embed.getTitle().toLowerCase();
     return title.contains("ready");
   }
 
-  private static boolean hasReadyCheckButtons(Message message) {
+  private static boolean isValidMessageForRecovery(final Message message, final long cutoffTime) {
+    return message.getAuthor().equals(message.getJDA().getSelfUser())
+        && message.getTimeCreated().toInstant().toEpochMilli() > cutoffTime
+        && !message.getEmbeds().isEmpty();
+  }
+
+  private static boolean hasReadyCheckButtons(final Message message) {
     return message.getActionRows().stream()
         .flatMap(row -> row.getComponents().stream())
         .anyMatch(
@@ -96,61 +97,61 @@ public class ReadyCheckRecoveryManager {
                     && button.getId().startsWith(TOGGLE_READY_PREFIX));
   }
 
-  private static boolean recoverReadyCheckFromMessage(Message message) {
+  private static void recoverReadyCheckFromMessage(final Message message) {
     try {
-      var embed = message.getEmbeds().get(0);
+      final MessageEmbed embed = message.getEmbeds().getFirst();
+      final String readyCheckId = extractReadyCheckId(message);
 
-      String readyCheckId = extractReadyCheckId(message);
       if (readyCheckId == null) {
         logger.debug("No ready check ID found in message: {}", message.getId());
-        return false;
+        return;
       }
 
       if (ReadyCheckManager.hasActiveReadyCheck(readyCheckId)) {
         logger.debug("Ready check {} already exists, skipping recovery", readyCheckId);
-        return false;
+        return;
       }
 
-      RecoveredReadyCheckData data = MessageParser.parseEmbedContent(embed.getDescription());
+      attemptRecovery(message, embed, readyCheckId);
 
-      if (data == null) {
-        logger.debug("Could not parse embed content from message: {}", message.getId());
-        return false;
-      }
-
-      ReadyCheckManager.ReadyCheck recoveredCheck =
-          createRecoveredReadyCheck(
-              readyCheckId,
-              message.getGuild().getId(),
-              message.getChannel().getId(),
-              data,
-              message.getId());
-
-      if (recoveredCheck == null) {
-        logger.debug("Could not create recovered ready check from message: {}", message.getId());
-        return false;
-      }
-
-      ReadyCheckManager.addRecoveredReadyCheck(readyCheckId, recoveredCheck);
-
-      updateRecoveredMessage(message, recoveredCheck, readyCheckId);
-
-      logger.info(
-          "Recovered ready check {} with {} users in {}",
-          readyCheckId,
-          recoveredCheck.getTargetUsers().size(),
-          message.getGuild().getName());
-
-      return true;
-
-    } catch (Exception e) {
+    } catch (final Exception e) {
       logger.debug(
           "Failed to recover ready check from message {}: {}", message.getId(), e.getMessage());
-      return false;
     }
   }
 
-  private static String extractReadyCheckId(Message message) {
+  private static void attemptRecovery(
+      final Message message, final MessageEmbed embed, final String readyCheckId) {
+    final RecoveredReadyCheckData data = MessageParser.parseEmbedContent(embed.getDescription());
+    if (data == null) {
+      logger.debug("Could not parse embed content from message: {}", message.getId());
+      return;
+    }
+
+    final ReadyCheckManager.ReadyCheck recoveredCheck =
+        createRecoveredReadyCheck(
+            readyCheckId,
+            message.getGuild().getId(),
+            message.getChannel().getId(),
+            data,
+            message.getId());
+
+    if (recoveredCheck == null) {
+      logger.debug("Could not create recovered ready check from message: {}", message.getId());
+      return;
+    }
+
+    ReadyCheckManager.addRecoveredReadyCheck(readyCheckId, recoveredCheck);
+    updateRecoveredMessage(message, recoveredCheck, readyCheckId);
+
+    logger.info(
+        "Recovered ready check {} with {} users in {}",
+        readyCheckId,
+        recoveredCheck.getTargetUsers().size(),
+        message.getGuild().getName());
+  }
+
+  private static String extractReadyCheckId(final Message message) {
     return message.getActionRows().stream()
         .flatMap(row -> row.getComponents().stream())
         .filter(component -> component instanceof Button)
@@ -162,26 +163,25 @@ public class ReadyCheckRecoveryManager {
   }
 
   private static ReadyCheckManager.ReadyCheck createRecoveredReadyCheck(
-      String readyCheckId,
-      String guildId,
-      String channelId,
-      RecoveredReadyCheckData data,
-      String messageId) {
+      final String readyCheckId,
+      final String guildId,
+      final String channelId,
+      final RecoveredReadyCheckData data,
+      final String messageId) {
 
-    String initiatorId = UserResolver.resolveUserId(data.initiatorName(), guildId);
+    final String initiatorId = UserResolver.resolveUserId(data.initiatorName(), guildId);
     if (initiatorId == null) {
       logger.warn("Could not resolve initiator: {} in guild: {}", data.initiatorName(), guildId);
       return null;
     }
 
-    var resolvedUsers = UserResolver.resolveUserStates(data.userStates(), guildId);
-
+    final var resolvedUsers = UserResolver.resolveUserStates(data.userStates(), guildId);
     if (resolvedUsers.targetUsers().isEmpty()) {
       logger.warn("No users could be resolved for ready check: {}", readyCheckId);
       return null;
     }
 
-    ReadyCheckManager.ReadyCheck recoveredCheck =
+    final ReadyCheckManager.ReadyCheck recoveredCheck =
         ReadyCheckManager.createRecoveredReadyCheck(
             readyCheckId,
             guildId,
@@ -200,14 +200,15 @@ public class ReadyCheckRecoveryManager {
   }
 
   private static void updateRecoveredMessage(
-      Message message, ReadyCheckManager.ReadyCheck readyCheck, String readyCheckId) {
+      final Message message,
+      final ReadyCheckManager.ReadyCheck readyCheck,
+      final String readyCheckId) {
     try {
-      var embed =
+      final var embed =
           ReadyCheckManager.buildReadyCheckEmbedForRecovery(
               readyCheck, message.getJDA(), readyCheck.getDescription());
-
-      var mainButtons = ReadyCheckUtils.createMainButtons(readyCheckId);
-      var saveButton = ReadyCheckUtils.createSaveButton(readyCheckId);
+      final var mainButtons = ReadyCheckUtils.createMainButtons(readyCheckId);
+      final var saveButton = ReadyCheckUtils.createSaveButton(readyCheckId);
 
       message
           .editMessageEmbeds(embed.build())
@@ -215,7 +216,7 @@ public class ReadyCheckRecoveryManager {
           .queue(
               success -> logger.debug("Updated recovered message: {}", readyCheckId),
               error -> logger.debug("Failed to update recovered message: {}", error.getMessage()));
-    } catch (Exception e) {
+    } catch (final Exception e) {
       logger.debug("Could not update recovered message: {}", e.getMessage());
     }
   }
